--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "good": "^6.6.3",
     "good-console": "^5.3.2",
     "hapi": "^13.3.0",
-    "inert": "^3.2.0"
+    "inert": "^3.2.0",
+    "socket.io": "^1.4.5"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
