switched from youtube to soundcloud, using REST instead of Sockets, server keeps a state of the current SC playlist, angular app will play a SC playlist

--- a/radio/api/package.json
+++ b/radio/api/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "coffeehouse-radio-socket",
+	"name": "coffeehouse-radio-api",
 	"version": "0.0.1",
-	"description": "Socket plugin",
+	"description": "api",
 	"engines": {
 		"node": ">=4.0.0"
 	},
