--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "good-console": "^5.3.2",
     "hapi": "^13.3.0",
     "inert": "^3.2.0",
-    "socket.io": "^1.4.5"
+    "node-soundcloud": "0.0.5"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
